--- a/charity _ get involved.html
+++ b/charity _ get involved.html
@@ -40,16 +40,16 @@
      
 
      
-<button id= "button1" type="button" <button class="btn btn-success"onclick=" window.open('file:///C:/Users/m/Desktop/FileTransportProtocall/wix%20sourcecodech.html','_blank')"> <strong>Home </strong> 
+<button id= "button1" type="button" <button class="btn btn-success"onclick=" window.open('index.html','_blank')"> <strong>Home </strong> 
 </button>
-<button id= "button2" type="button" <button class="btn btn-success"onclick=" window.open('file:///C:/Users/m/Desktop/FileTransportProtocall/charity%20_%20food%20list.html','_blank')"style= "position: relative; left:150px;"><strong> Food List  
+<button id= "button2" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20food%20list.html','_blank')"style= "position: relative; left:150px;"><strong> Food List  
 </button>
- <button id= "button3" type="button" <button class="btn btn-success"onclick=" window.open('file:///C:/Users/m/Desktop/FileTransportProtocall/charity%20_%20get%20involved.html','_blank')"> <strong> Get Involved </strong> 
+ <button id= "button3" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20get%20involved.html','_blank')"> <strong> Get Involved </strong> 
 </button>           
-<button id= "button4" type="button" <button class="btn btn-success"onclick=" window.open('file:///C:/Users/m/Desktop/FileTransportProtocall/A%20story.html','_blank')">  <strong>Our Story </strong> 
+<button id= "button4" type="button" <button class="btn btn-success"onclick=" window.open('A%20story.html','_blank')">  <strong>Our Story </strong> 
 </button>
-<button id= "button5" type="button" <button class="btn btn-success"onclick=" window.open('file:///C:/Users/m/Desktop/FileTransportProtocall/charity%20_%20Donate2.html','_blank')"> <strong> donate </strong> 
-</button>    
+<button id= "button5" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20Donate2.html','_blank')"> <strong> donate </strong> 
+</button>
 <style>
 button {
   color:white;        /* yellow text */
