--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ left:635px;}
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FBackpack-Buddies-of-Maple-Valley-557233627773341%2F&width=170&height=21&layout=button_count&size=small&show_faces=true&appId" width="105" height="21" align="left" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 	<div id="comp-j52qol5o" class="SocialLinkBar"  align="left"style= "top:-100px;">
     
-    <a href="http://www.facebook.com/wix">
+    <a href="https://www.facebook.com/Backpack-Buddies-of-Maple-Valley-557233627773341/">
         <img src="./wix sourcecodech_files/e316f544f9094143b9eac01f1f19e697.png" itemprop="contentURL" width="20" height="20" align="left" style= "top:-130px;">
     </a>
 	<p57><a href="http://www.SignUpGenius.com/" target="_blank"><img alt="Free Online Sign Up Sheets" border="0" height="50%" src="http://www.SignUpGenius.com/images/SignUpGenius-square.gif" width="50%" /></a></p57>
