--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ left:635px;}
             <div id="comp-j52qiczg">
 
 </div>
-	<div id= linkBox class=absolute><p20></p20><p21>links<br></p21>
+	<div id= linkBox class=absolute style=@media screen and (min-width: 600px{
+         position:relative;left:-50px;})><p20></p20><p21>links<br></p21>
 	 	<br>
 
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FBackpack-Buddies-of-Maple-Valley-557233627773341%2F&width=170&height=21&layout=button_count&size=small&show_faces=true&appId" width="105" height="21" align="left" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
@@ -107,12 +108,7 @@ left:635px;}
 	<br><p><a href="https://tahomahigh.com/counseling/" target="_blank">tahoma hs counseling</a></p>
 </div>
 
-@media screen and (min-width: 480px) {
-    #linkBox {
-         position: relative;
-    left: -50px;
-    }
-}
+
     <style>
   p21 {color:black;}
   @media only screen and (max-width: 300px)
