--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <!-- saved from url=(0060)https://kgilliam429.wixsite.com/charity/?_escaped_fragment_= -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
@@ -94,7 +94,7 @@ left:635px;}
             <div id="comp-j52qiczg">
 
 </div>
-	<div id= linkBox class=absolute style=@media screen and (max-width: 600px){left:250px;}><p20></p20><p21>links<br></p21>
+	<div id= linkBox class=relative style=@media screen and (max-width: 600px){left:250px;}><p20></p20><p21>links<br></p21>
 	 	<br>
 
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FBackpack-Buddies-of-Maple-Valley-557233627773341%2F&width=170&height=21&layout=button_count&size=small&show_faces=true&appId" width="105" height="21" align="left" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
