--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@ left:635px;}
 
     <style>
   p21 {color:black;}
-  @media only screen and (max-width: 300px)
-  {#linkBox{position:relative;
-    right:100px;
-    top:300px;}}
+ 
 	div.absolute {
     position: absolute;
     top: 300px;
@@ -121,7 +118,10 @@ left:635px;}
     width: 200px;
     height: 1000px;
     border: 3px solid #A9A9A9;
-
+ @media only screen and (max-width: 300px)
+  {position:relative;
+    right:100px;
+	  top:300px;}}
 	</style>
 	</div>
 
