--- a/index.html
+++ b/index.html
@@ -118,10 +118,14 @@ left:635px;}
     width: 200px;
     height: 1000px;
     border: 3px solid #A9A9A9;
- @media only screen and (max-width: 300px)
-  {position:relative;
-    right:-100px;
-	  top:300px;}}
+     top:300px;}
+      @media only screen and (max-width: 300px){
+ div.absolute  {
+        position: absolute;
+        left: auto;
+        right: 0;
+        background: lime;
+	      }}
 	</style>
 	</div>
 
