--- a/index.html
+++ b/index.html
@@ -119,13 +119,10 @@ left:635px;}
     height: 1000px;
     border: 3px solid #A9A9A9;
      top:300px;}
-      @media only screen and (max-width: 300px){
- div.absolute  {
-        position: absolute;
-        left: auto;
-        right: 0;
-        background: lime;
-	      }}
+     @media only screen and (max-width: 300px){
+     div.absolute  {
+     position: absolute;
+  left:50px; }}
 	</style>
 	</div>
 
