--- a/index.html
+++ b/index.html
@@ -118,11 +118,7 @@ left:635px;}
     width: 200px;
     height: 1000px;
     border: 3px solid #A9A9A9;
-     top:300px;}
-     @media only screen and (max-width: 300px){
-     div.absolute  {
-     position: absolute;
-  left:50px; }}
+		float:right;}
 	</style>
 	</div>
 
