--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ left:635px;}
     width: 200px;
     height: 1000px;
     border: 3px solid #A9A9A9;
-		float:right;}
+    position:absolute;
+    right:0;}
 	</style>
 	</div>
 
