--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@ left:635px;}
     height: 1000px;
     border: 3px solid #A9A9A9;
     position:absolute;
-    right:0;}
+    right:10;}
+	   @mediaa only screen and (max-width: 500px) { 
+        div.absolute{
+        position:absolute;
+	right:-100;}}	    
 	</style>
 	</div>
 
