--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ button {
 }
 #button2 {position: relative;
 left:20px;}
-#button3 {position: relative;
-left:350px;}
+#button3 {position: relative;left:350px;}
 
 #button4 {position: relative;
 left:500px;}
@@ -120,10 +119,10 @@ left:635px;}
     border: 3px solid #A9A9A9;
     position:absolute;
     right:10;}
-	   @media only screen and (max-width: 500px) { 
-        div.absolute{
-        position:absolute;
-	right:-100;}}	    
+        @media only screen and (max-width: 500px) { 
+   div.absolute{
+   position:absolute;
+   right:-100;}}	    
 	</style>
 	</div>
 
