--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@ left:635px;}
    position:absolute;
    right:0;}}
 	div.absolute {
+@media only screen and (max-width: 500px) 
+{position:absolute;
+right:0;}}
     position: absolute;
     top: 300px;
     right: 50px;
@@ -120,7 +123,7 @@ left:635px;}
     height: 1000px;
     border: 3px solid #A9A9A9;
     position:absolute;
-    right:0;}
+    right:10;}
     
 	</style>
 	</div>
