--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ left:635px;}
 	div.absolute {
 @media only screen and (max-width: 500px) 
 {position:absolute;
-right:0;}}
+right:0;}
     position: absolute;
     top: 300px;
     right: 50px;
