--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ left:500px;}
 #button5 {position: relative;
 
 	left:635px;}
-
+{
 
 </style>
     </header>
@@ -120,9 +120,9 @@ left:500px;}
     position:absolute;
     right:10;}
 @media only screen and (max-width: 500px)
-div.absolute {
+{div.absolute {
 position:absolute;
-right:0;}   
+	right:0;}   }
     
 	</style>
 	</div>
