--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ left:500px;}
     right:10;}
 @media only screen and (max-width: 500px)
 {div.absolute {
-position:absolute;
-	right:0;}   }
+ visibility: hidden;}   }
     
 	</style>
 	</div>
