--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ left:500px;}
     position:absolute;
     right:10;}
 @media only screen and (max-width: 500px)
-{div.absolute {
- visibility: hidden;}   }
+{
+ visibility: hidden;   }
     
 	</style>
 	</div>
