--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ left:20px;}
 left:500px;}
 #button5 {position: relative;
 
-	left:635px;}
-{
+	left:635px;}{
 
 </style>
     </header>
@@ -118,7 +117,7 @@ left:500px;}
     height: 1000px;
     border: 3px solid #A9A9A9;
     position:absolute;
-    right:10;}
+    right:10;
 @media only screen and (max-width: 500px)
 {
  visibility: hidden;   }
