--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ left:500px;}
     position:absolute;
     right:10;
 @media only screen and (max-width: 500px)
-{
- visibility: hidden;   }
+{div.absolute {
+	visibility: hidden;   }}
     
 	</style>
 	</div>
