--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ left:500px;}
     </header>
 	
 
-	
+}	
 <section class="page" id="c1dmp">
 
 
@@ -117,7 +117,7 @@ left:500px;}
     height: 1000px;
     border: 3px solid #A9A9A9;
     position:absolute;
-    right:10;
+		right:10;}
 @media only screen and (max-width: 500px)
 {div.absolute {
 	visibility: hidden;   }}
