--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@ left:500px;}
 }	
 <section class="page" id="c1dmp">
 
-
-
-            <div id="comp-j52qiczg">
+in            <div id="comp-j52qiczg">
 
 </div>
 	<div id= linkBox class=absolute><p20></p20><p21>links<br></p21>
@@ -118,7 +116,7 @@ left:500px;}
     border: 3px solid #A9A9A9;
     position:absolute;
 		right:10;}
-@media only screen and (max-width: 500px)
+@media only screen and (min-width: 500px)
 {div.absolute {
 	visibility: hidden;   }}
     
