--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ button {
 }
 #button2 {position: relative;
 left:20px;}
-#button3 {position: relative;left:350px;}
-
+#button3 {position: relative;left:350px;ax
 #button4 {position: relative;
 left:500px;}
 #button5 {position: relative;
@@ -116,7 +115,7 @@ in            <div id="comp-j52qiczg">
     border: 3px solid #A9A9A9;
     position:absolute;
 		right:10;}
-@media only screen and (min-width: 500px)
+@media only screen and (max-width: 500px)
 {div.absolute {
 	visibility: hidden;   }}
     
