--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <button id= "button3" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20get%20involved.html','_blank')"> <strong> Get Involved </strong> 
 </button>           
 <button id= "button4" type="button" <button class="btn btn-success"onclick=" window.open('A%20story.html','_blank')">  <strong>Our Story </strong> 
-</button>
+ or</button>
 <button id= "button5" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20Donate2.html','_blank')"> <strong> donate </strong> 
 </button>
 <style>
@@ -115,7 +115,7 @@ in            <div id="comp-j52qiczg">
     border: 3px solid #A9A9A9;
     position:absolute;
 		right:10;}
-@media only screen and (max-width: 500px)
+@media only screen and (max-width: 500px) or handheld
 {div.absolute {
 	visibility: hidden;   }}
     
