js template added

--- a/index.html
+++ b/index.html
@@ -244,7 +244,12 @@ div.absolute {
 
 
 	</style>
-
+		<script>if ( $(window).width() > 739) {      
+  //Add your javascript for large screens here 
+} 
+else {
+  //Add your javascript for small screens here 
+}</script>
 	</div>
 
 
