cellphone friendly version 1.0
need to add footer with links in it

--- a/index.html
+++ b/index.html
@@ -235,21 +235,15 @@ div.absolute {
 
 		right:10;}
 
-@media only screen and (max-width: 500px) or handheld
+@media only screen and (max-width: 700px) 
 
 {div.absolute {
+    background-color:red;
+    display:none;
+   }}
+		</style>
 
-	visibility: hidden;   }}
 
-
-
-	</style>
-		<script>if ( $(window).width() > 739) {      
-  //Add your javascript for large screens here 
-} 
-else {
-  //Add your javascript for small screens here 
-}</script>
 	</div>
 
 
