--- a/index.html
+++ b/index.html
@@ -233,14 +233,14 @@ div.absolute {
 
     position:absolute;
 
-		right:10;}
+		right:10;
 
 @media only screen and (max-width: 700px) 
 
 {div.absolute {
-    background-color:red;
+    
     display:none;
-   }}
+	}}}
 		</style>
 
 
