--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 <meta id="wixMobileViewport" name="viewport" content="width=980, user-scalable=yes">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 
 
@@ -233,10 +233,10 @@ div.absolute {
 
     position:absolute;
 
-		right:10;
+	right:10;}
 
-@media only screen and (max-width: 700px) 
-	display:none;
+@media only screen and (max-width: 700px){ 
+	display:none;}
 	}
 		</style>
 
