--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 
-<meta id="wixMobileViewport" name="viewport" content="width=980, user-scalable=yes">
+<meta id="wixMobileViewport" name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 
