--- a/index.html
+++ b/index.html
@@ -233,11 +233,12 @@ div.absolute {
 
     position:absolute;
 
-	right:10;}
-
-@media only screen and (max-width: 700px){ 
-	display:none;}
-	}
+	right:10;
+	@media only screen and (max-width: 700px)     
+{div.absolute {
+    background-color:red;
+    display:none;
+  }}}
 		</style>
 
 
