--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 <meta id="wixMobileViewport" name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<meta name="viewport" content="width=device-width, user-scalable=yes"> 
 
 
 
