--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@ div.absolute {
     position:absolute;
 
 	right:10;
-	@media only screen and (max-width: 700px)     
+	   @media only screen and (min-device-width : 320px) and (max-device-width : 480px)
 {div.absolute {
-    background-color:red;
+ 
     display:none;
-  }}}
+	}}}
 		</style>
 
 
