--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 
-<meta id="wixMobileViewport" name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0,user-scalable=no">
+<meta id="wixMobileViewport" name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0,user-scalable=yes">
 
 
 
