--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ div.absolute {
 
     top: 300px;
 
-    right: 50px;
+    float:right;
 
     width: 200px;
 
@@ -231,9 +231,7 @@ div.absolute {
 
     border: 3px solid #A9A9A9;
 
-    position:absolute;
-
-	right:10;
+  
 	   @media only screen and (min-device-width : 320px) and (max-device-width : 480px)
 {div.absolute {
  
