--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@ left:635px;}
   p21 {color:black;}
 div.absolute {
 
-    position: absolute;
-
+    position: relative;
+float:right;
     top: 300px;
 
-    float:right;
+    
 
     width: 200px;
 
