--- a/index.html
+++ b/index.html
@@ -219,8 +219,9 @@ left:635px;}
   p21 {color:black;}
 div.absolute {
 
-    position: relative;
-float:right;
+   position:absolute;
+
+right:0;
     top: 300px;
 
     
