--- a/index.html
+++ b/index.html
@@ -230,14 +230,15 @@ right:0;
 
     height: 1000px;
 
-    border: 3px solid #A9A9A9;
+	border: 3px solid #A9A9A9;}</style>
+		<style>
 
   
 	   @media only screen and (min-device-width : 320px) and (max-device-width : 480px)
 {div.absolute {
  
     display:none;
-	}}}
+	}}
 		</style>
 
 
