--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 
-<meta id="wixMobileViewport" name="viewport" content="width=screen-width,initial-scale=1.0, maximum-scale=1.0,user-scalable=yes">
+<meta id="wixMobileViewport" name="viewport" content="width=screen-width,initial-scale=.10, maximum-scale=1.0,user-scalable=yes">
 
 
 
