--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <meta http-equiv="etag" content="83a758d339f086ec443b518e2f7af118">
 
-<meta property="og:title" content="charity">
+<meta property="og:title" content="Backpack buddies">
 
 <meta property="og:type" content="article">
 
