--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <meta property="og:url" content="https://kgilliam429.wixsite.com/charity">
 
-<meta property="og:site_name" content="charity">
+<meta property="og:site_name" content="Backpack Buddies">
 
 <meta property="og:description" content="HOME">
 
