--- a/index.html
+++ b/index.html
@@ -344,7 +344,19 @@ p4 {
 
 }
 
-</style>
+</style
+<p8 style="font-family:'Cambria '">feeding kids in need</p8>
+	<style>p8 {
+
+    font-size: 125%;
+
+	position: relative;
+
+	left: 110px;
+
+	font-weight: lighter;
+
+}
 
         
 
