--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@ p4 {
 
 }
 
-</style
+</style>
+<br>
 <p8 style="font-family:'Cambria '">feeding kids in need</p8>
 	<style>p8 {
 
@@ -359,7 +360,7 @@ p4 {
 }
 
         
-
+</style>
 
 
 
