--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@ p4 {
 }
 
 </style>
-<br>
-<p8 style="font-family:'Cambria '">feeding kids in need</p8>
+
+<p8 style="font-family:'Cambria '"><br>feeding kids in need</p8>
 	<style>p8 {
 
     font-size: 125%;
