--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ p4 {
 
 </style>
 <br><br>
-<p81 style="font-family:'Cambria '"><br>feeding kids in need</p81>
+<p81 style="font-family:'Cambria '">feeding kids in need</p81>
 	<style>p81 {
 
     font-size: 125%;
