Update charity _ food list.html

--- a/charity _ food list.html
+++ b/charity _ food list.html
@@ -99,6 +99,7 @@ left:635px;}
 
 
          <ul style="font-family:'Cambria '"><li>macaroni and cheese</li><li>canned soup or pasta </li><li>chocolate milk </li><li>juice</li><li> popcorn </li><li>applesauce or fruit cups</li>
+		 <li>oatmeal</li>	 <li> pudding</li><li>granola bars</li><li>crackers</li><li>2 pieces of fresh fruit</li>
 
 </ul>  
 
