Update charity _ get involved.html

--- a/charity _ get involved.html
+++ b/charity _ get involved.html
@@ -94,7 +94,7 @@ left:635px;}
 
 
             <div id="comp-j52q9eq2" class="Text">
-    <p class="font_8" style="font-size:15px; line-height:1.5em"><span class="color_23"><span style="text-decoration:underline; 		position: relative; left: 110px; font-weight:lighter;"><p><a href="https://774429.github.io/final-test/contact us" target="_blank">tahoma hs counseling</p><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">Contact us!</span></span></span></span></a></span></span></p>
+    <p class="font_8" style="font-size:15px; line-height:1.5em"><span class="color_23"><span style="text-decoration:underline; 		position: relative; left: 110px; font-weight:lighter;"><a href="https://774429.github.io/final-test/contact us" target="_blank"><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">Contact us!</span></span></span></span></a></span></span></p>
 </div>
 
 
