Update charity _ get involved.html

--- a/charity _ get involved.html
+++ b/charity _ get involved.html
@@ -93,9 +93,9 @@ left:635px;}
 </style>
 
 <br>
-            <div id="comp-j52q9eq2" class="Text">
-		    <p><a href="https://774429.github.io/final-test/contact us" target="_blank">Contact us!</p>
-</div>
+           
+		    <p50><a href="https://774429.github.io/final-test/contact us" target="_blank">Contact us!</p50>
+
 
 
     </section>
