--- a/charity _ get involved.html
+++ b/charity _ get involved.html
@@ -94,7 +94,7 @@ left:635px;}
 
 <br>
            
-<p50><a href="https://774429.github.io/final-test/contact-us" target="_blank">Contact us!</a></p50>
+<a href="https://774429.github.io/final-test/contact-us" target="_blank">Contact us!a</a>
 
 
 
