--- a/charity _ get involved.html
+++ b/charity _ get involved.html
@@ -84,7 +84,7 @@ left:635px;}
    
 
 <p4 style="font-family:'Cambria '">We operate solely on a dedicated group of volunteers and we’d love to have you join us! There are different ways to get involved. <br>    During the school year we pack bags, nearly every week, on Thursday eve-nings. Some volunteers take one week each month and others<br> fill in, here and there, when their schedule allows. Volunteers pick up and deliver food to our headquarters twice a month and they deliver<br> bags to each elementary and mid-dle school each week. We also have various fundraising events that could not happen without volunteers.<br>Looking for a place to get involved? Visit our <a href="">Sign Up Genius</a> site to see what opportunities are currently available. Don’t see what you’re<br> looking for? Have an idea or a talent that could benefit Backpack Buddies?<br>
-	<a href="https://774429.github.io/final-test/contact-us" target="_blank">Contact us!</a>
+	<a href="https://774429.github.io/final-test/contact-us.html" target="_blank">Contact us!</a>
  </p4><style>p4 {
     font-size: 125%;
 		position: relative;
