--- a/A story.html
+++ b/A story.html
@@ -86,11 +86,18 @@ left:635px;}
 }
 </style>
    <br><br>
-<p9 style="font-family:'Cambria '">   &nbsp; &nbsp; &nbsp; &nbsp; We are a local charity that believes no child should go hungry, and the best way to <br> prevent
- that from happining is to take action in the comunity.<br> We saw a need in our comunity and were convicted by it so we made the change.<br>
- So whoever you are if you feel the conviction and have the means to give, please do.<br>
- we are not a charity focused on makeing a name for ourselves. <br> We do not waste monney paying billionare board members to advise what sad tv advertizements to play next.<br>
-We are a group acting united in good conscience to combat the pain of hunger because<br> we are all human and should sympathise.  <style>p9 {
+<p9 style="font-family:'Cambria '">   &nbsp; &nbsp; &nbsp; &nbsp; Backpack Buddies of Maple Valley began with Mindy Gamble & Jenny Nold, whose daughters who participate in girl scouts together. 
+<br>
+"In September 2014, our girls began a Girl Scout service project with Covington Backpack Buddies.  During their first day of volunteering for the service project, our girls were introduced to Backpack Buddies of Covington and what it is.  The volunteers explained they would be packing 200+ bags that week and who was going to receive the bags.  They also explained how their involvement would impact the children receiving the bags.  At that moment I knew I wanted to involved with this program in my own community."
+<br>
+After finding out that this type of program wasn't already operating in the Tahoma School District, Mindy and Jenny, both para-educators in the district, got to work. 
+<br>
+"Our first task was to introduce the concept and get approval from the district.  In early Spring of 2015 we began to spread the word, telling others about Backpack Buddies and gathering the support of the community.  That summer, Rotary of Maple Valley came aboard to help Backpack Buddies."
+<br>
+Things really started moving from there! In October 2016 the first bags were packed and sent home with students. During their first school year in operation, 2016-2017, Backpack Buddies of Maple Valley served over 50 students with over 1,000 bags packed and sent home!  This August 2017, Backpack Buddies of Maple Valley secured their own non-profit status.
+<br>
+"We really believe in Backpack Buddies and how greatly it benefits the students we serve. Facing hunger or nutritional insecurity is terrifying and so uncertain for children. It affects them physically, mentally, socially and academically. By doing one simple thing (sending home a bag of food during the weekend) we help provide some nutrition and security. In turn we believe their social and academic performance improves as well."
+<style>p9 {
     font-size: 125%;
 	font-weight: lighter;
 		position: relative;
