--- a/index.html
+++ b/index.html
@@ -318,8 +318,9 @@ p4 {
 
 <br><br>
 
-<p7 style="font-family:'Cambria '">&nbsp; &nbsp; &nbsp; &nbsp; We serve students in grades  K-8  who face nutritional insecurity over the weekend be-
-	<br>cause they are lacking sufficient nutrition at home or are unsure where their<br> next meal will come from. Students
+<p7 style="font-family:'Cambria '">&nbsp; &nbsp; &nbsp; &nbsp; We serve students in grades  K-8  who face nutritional insecurity over 
+	the weekend 
+	<br>because they are lacking sufficient nutrition at home or are unsure where their<br> next meal will come from. Students
 	families enroll voluntarily and their identi-<br>ty is only known to the counselor at their school.</p7><style>p7 {
 
     font-size: 125%;
