--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ left:635px;}
 	<p57><a href="http://www.SignUpGenius.com/" target="_blank"><img alt="Free Online Sign Up Sheets" border="0" height="50%" src="http://www.SignUpGenius.com/images/SignUpGenius-square.gif" width="50%" /></a></p57>
 
 	<!--<br><p><a href="https://tahomahigh.com/counseling/" target="_blank">tahoma hs counseling</a></p> -->
-<br><p77><a href="" target="_blank">sign up to recive</a></p77>
+<br><p77><a href="sign-up-with-counselor.html" target="_blank">sign up to recive</a></p77>
 </div>
 
     <style>
