--- a/sign-up-with-counselor.html
+++ b/sign-up-with-counselor.html
@@ -11,7 +11,7 @@
 <meta property="og:type" content="article">
 
 <meta property="og:site_name" content="charity">
-<meta property="og:description" content="contact us">
+<meta property="og:description" content="TAHOMA counselors">
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 
 <meta id="wixMobileViewport" name="viewport" content="width=980, user-scalable=yes">
