--- a/sign-up-with-counselor.html
+++ b/sign-up-with-counselor.html
@@ -75,6 +75,34 @@ left:635px;}
     </header>
 
    
+<font face="Cambria" ><p4>School Counselors<br><br>
+
+Leanne Rollet-Lake Wilderness email <a href="mailto:lrollet@tahomasd.us,?subject=backpack%20buddies">lrollet@tahomasd.us</a><br>
+Monica Clark-Tahoma Elementary School email - <a href="mailto:mclark@tahomasd.us?subject=backpack%20buddies">mclark@tahomasd.us</a><br>
+Melanie Persons-Shadow Lake email - <a href="mailto:mpersons@tahomasd.us?subject=backpack%20buddies">mpersons@tahomasd.us</a><br>
+Cecelia Guyette-Rock Creek email - <a href="mailto:cguyette@tahomasd.us?subject=backpack%20buddies">cguyette@tahomasd.us</a><br>
+Kalei McKittrick-Cedar River elementary email - <a href="mailto: kmckittrick@tahomasd.us?subject=backpack%20buddies"> kmckittrick@tahomasd.us</a><br>
+KeriSilvers - Glacier Park email - <a href="mailto:  ksilvers@tahomasd.us?subject=backpack%20buddies"> ksilvers@tahomasd.us</a><br>
+ 
+Liz Theibert-Maple View Middle School <a href="mailto:lthibert@tahomasd.us?subject=backpack%20buddies">lthibert@tahomasd.us</a><br>
+Betty Bernstein-Maple View Middle School<br>
+ 
+Branda Almli- Summit Trail email -<a href="mailto: balmli@tahomasd.us?subject=backpack%20buddies"> balmli@tahomasd.us</a><br>
+Emily Whylie-Summit Trail<br><br>
+
+High school unknown---not serving at this time.</p4>
+</font>
+<style>
+   h1
+
+
+  p4 {color:black;
+position:absolute;
+top: 200px;
+
+
+}</style>
+
 
 
 
