--- a/contactus.html
+++ b/contactus.html
@@ -75,7 +75,7 @@ left:635px;}
     </header>
 
    
-
+<p><font face="Cambria" >Charity Pres, mrs.Gamble<br>Vice Pres, mrs.Nold</font></p></body>
 
 
 
