--- a/contactus.html
+++ b/contactus.html
@@ -75,7 +75,10 @@ left:635px;}
     </header>
 
    
-<p><font face="Cambria" >Charity Pres, mrs.Gamble<br>Vice Pres, mrs.Nold</font></p></body>
+<p><font face="Cambria" >Charity Pres, mrs.Gamble<br>
+    Vice Pres, mrs.Nold<a href="mailto: mrs_nold2004@outlook.com,?subject=backpack%20buddies"> mrs_nold2004@outlook.com</a></font></p>
+
+</body>
 
 
 
