--- a/contactus.html
+++ b/contactus.html
@@ -75,7 +75,7 @@ left:635px;}
     </header>
 
    
-<p><font face="Cambria" >Charity Pres, mrs.Gamble<br>
+<p><font face="Cambria" >Charity Pres, mrs.Gamble<a href="mailto:  mindygamble22@gmail.com,?subject=backpack%20buddies">  mindygamble22@gmail.com</a><br>
     Vice Pres, mrs.Nold<a href="mailto: mrs_nold2004@outlook.com,?subject=backpack%20buddies"> mrs_nold2004@outlook.com</a></font></p>
 
 </body>
