Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -39,15 +39,15 @@
     
     
 </div>
-<button id= "button1" type="button" <button class="btn btn-success"onclick=" window.open('index.html','_blank')"> <strong>Home </strong> 
+<button id= "button1" type="button" <button class="btn btn-success"onclick=" window.open('index.html','_self')"> <strong>Home </strong> 
 </button>
-<button id= "button2" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20food%20list.html','_blank')"style= "position: relative; left:150px;"><strong> Food List  
+<button id= "button2" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20food%20list.html','_self')"style= "position: relative; left:150px;"><strong> Food List  
 </button>
- <button id= "button3" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20get%20involved.html','_blank')"> <strong> Get Involved </strong> 
+ <button id= "button3" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20get%20involved.html','_self')"> <strong> Get Involved </strong> 
 </button>           
-<button id= "button4" type="button" <button class="btn btn-success"onclick=" window.open('A%20story.html','_blank')">  <strong>Our Story </strong> 
+<button id= "button4" type="button" <button class="btn btn-success"onclick=" window.open('A%20story.html','_self')">  <strong>Our Story </strong> 
 </button>
-<button id= "button5" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20Donate2.html','_blank')"> <strong> donate </strong> 
+<button id= "button5" type="button" <button class="btn btn-success"onclick=" window.open('charity%20_%20Donate2.html','_self')"> <strong> donate </strong> 
 </button>
 <style>
 button {
