--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <meta name="description" content="HOME">
 
-<link rel="shortcut icon" href="https://www.wix.com/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://774429.github.io/final-test/favcon.png" type="image/x-icon">
 
-<link rel="apple-touch-icon" href="https://www.wix.com/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="https://774429.github.io/final-test/favcon.png" type="image/x-icon">
 
     <meta http-equiv="X-Wix-Renderer-Server" content="app-jvm5c.42.wixprod.net">
 
