--- a/A story.html
+++ b/A story.html
@@ -6,8 +6,9 @@
 <title>charity | our story</title>
 <meta name="fb_admins_meta_tag" content="">
 <meta name="description" content="food list">
-<link rel="shortcut icon" href="https://www.wix.com/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="https://www.wix.com/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://774429.github.io/final-test/favcon.png" type="image/x-icon">
+
+<link rel="apple-touch-icon" href="https://774429.github.io/final-test/favcon.png" type="image/x-icon">
     <meta http-equiv="X-Wix-Renderer-Server" content="app-jvm6a.42.wixprod.net">
 <meta http-equiv="X-Wix-Meta-Site-Id" content="4b13e417-86bb-42b8-8849-50c4e1af0dbf">
 <meta http-equiv="X-Wix-Application-Instance-Id" content="99eb9ff5-3a35-4bc2-83eb-49d794dce8f1">
