--- a/sign-up-with-counselor.html
+++ b/sign-up-with-counselor.html
@@ -9,7 +9,9 @@
 
 <meta property="og:title" content="charity | get involved">
 <meta property="og:type" content="article">
+<link rel="shortcut icon" href="https://774429.github.io/final-test/favcon.png" type="image/x-icon">
 
+<link rel="apple-touch-icon" href="https://774429.github.io/final-test/favcon.png" type="image/x-icon">
 <meta property="og:site_name" content="charity">
 <meta property="og:description" content="TAHOMA counselors">
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
