--- a/sign-up-with-counselor.html
+++ b/sign-up-with-counselor.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
     
-<title>charity | contact us</title>
+<title>charity | contact counselor</title>
 
 
 
