--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ p4 {
 
 	position: relative;
 
-	left: 210px;
+	left: 250px;
 
 	font-weight: lighter;
 
@@ -393,7 +393,18 @@ p4 {
             <div id="comp-j4gdpsps" class="Text">
 
     <p class="font_8" style="font-size:17px; text-align:center"><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.1em;">work with </span><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.113333em;">community</span><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.1em;">&nbsp;groups</span></p>
+<style>p {
 
+    
+
+	position: relative;
+
+	right: 250px;
+
+}
+
+        
+</style>
 </div>
 
 
