--- a/index.html
+++ b/index.html
@@ -392,16 +392,8 @@ p4 {
 
             <div id="comp-j4gdpsps" class="Text">
 
-    <p class="font_8" style="font-size:17px; text-align:center"><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.1em;">work with </span><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.113333em;">community</span><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.1em;">&nbsp;groups</span></p>
-<style>p {
+    <p class="font_8" style="font-size:17px; text-align:center; position:relative; right:300px"><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.1em;">work with </span><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.113333em;">community</span><span style="color: rgb(79, 79, 79); font-family: lulo-clean-w01-one-bold, sans-serif; font-size: 17px; letter-spacing: 0.1em;">&nbsp;groups</span></p>
 
-    
-
-	position: relative;
-
-	right: 250px;
-
-}
 
         
 </style>
