--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -96,6 +96,11 @@ left:635px;}
 <a href="Sponsorship Program 2017.docx" download="Sponsorship Program 2017.docx">Download sponsorship form</a>
             <div id="comp-j52tsaaz" class="Text">
     <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">Donations Help a lot.</span></span></span></span></span></p>
+	<style>p {
+position: relative;
+	left: 110px;
+}
+</style>	    
 </div>
 <p1 style="font-family:'Cambria '">   &nbsp; &nbsp; &nbsp; &nbsp; Thank you for considering us for your charitable contrabutions.<br>
 We are glad that you care so much as to go this far out of your way for others.<br>
