--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -80,6 +80,7 @@ left:635px;}
 </div>
 
     </header>
+<br>
 <section class="page" id="hwfzj">
                 <div id="comp-j52tr9tm">
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -93,6 +94,7 @@ left:635px;}
  
 
 </div>
+	<br>
 <a href="Sponsorship Program 2017.docx" download="Sponsorship Program 2017.docx">Download sponsorship form</a>
             <div id="comp-j52tsaaz" class="Text">
     <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">Donations Help a lot.</span></span></span></span></span></p>
@@ -101,7 +103,7 @@ position: relative;
 	left: 110px;
 }
 </style>	    
-</div>
+</div><br>
 <p1 style="font-family:'Cambria '">   &nbsp; &nbsp; &nbsp; &nbsp; Thank you for considering us for your charitable contrabutions.<br>
 We are glad that you care so much as to go this far out of your way for others.<br>
 Your efforts of goodwill are never in vain when it comes to feeding the less<br>economicly fortunate.
