--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -97,7 +97,7 @@ left:635px;}
 	<br><br>
 <a href="Sponsorship Program 2017.docx" download="Sponsorship Program 2017.docx">Download sponsorship form</a>
             <div id="comp-j52tsaaz" class="Text">
-    <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">Donations Help a lot.</span></span></span></span></span></p>
+    <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">&nbsp; &nbsp; &nbsp; &nbsp;Donations Help a lot.</span></span></span></span></span></p>
 	<style>p {
 position: relative;
 	left: 150px;
