--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -97,17 +97,19 @@ left:635px;}
 	<br><br>
 <a href="Sponsorship Program 2017.docx" download="Sponsorship Program 2017.docx">Download sponsorship form</a>
             <div id="comp-j52tsaaz" class="Text">
-    <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">&nbsp; &nbsp; &nbsp; &nbsp;Donations Help a lot.</span></span></span></span></span></p>
+    <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">&nbsp; &nbsp; &nbsp; &nbsp;Sponsorship Program</span></span></span></span></span></p>
 	<style>p {
 position: relative;
 	left: 230px;
 }
 </style>	    
 </div><br>
-<p1 style="font-family:'Cambria '">   &nbsp; &nbsp; &nbsp; &nbsp; Thank you for considering us for your charitable contrabutions.<br>
-We are glad that you care so much as to go this far out of your way for others.<br>
-Your efforts of goodwill are never in vain when it comes to feeding the less<br>economicly fortunate.
-And again Thank you on behaf of our volunteer's.</p1>  <style>p1 {
+<p1 style="font-family:'Cambria '">   &nbsp; &nbsp; &nbsp; &nbsp; We are looking for individuals and businesses who would like to support Backpack<br>
+Buddies of Maple Valley. Backpack Buddies is a program in the Tahoma School District<br>
+that serves kids who are in need of food over the weekends. We buy, pack and deliver<br>
+	bags of food to the schools each week. We are a non-profit organization that is fully<br>
+	dependent on community contributions. Please look below to see what level of<br>
+	sponsorship you would like to donate at.</p1>  <style>p1 {
     font-size: 125%;
 	font-weight: lighter;
 		position: relative;
