Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -132,7 +132,13 @@ p3 {
 	left: 300px;
 }
 </style><br>
-
+<p4  style="text-indent: 40px; font-family:' Eras Medium ITC'" >Blue Sponsorship (1 school for ½ year) $ 918.00</p4><style>
+p4 {
+    font-size: 205%;
+	position: relative;
+	left: 300px;
+}
+</style><br>
 
     </section>
 <footer class="container" id="SITE_FOOTER" >
