Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -139,7 +139,13 @@ p4 {
 	left: 300px;
 }
 </style><br>
-
+<p5  style="text-indent: 40px; font-family:' Eras Medium ITC'" >Gold Sponsorship (1 school for 1 year) $ 1,890.00</p4><style>
+p5 {
+    font-size: 205%;
+	position: relative;
+	left: 300px;
+}
+</style><br>
     </section>
 <footer class="container" id="SITE_FOOTER" >
     </footer>
