--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -124,7 +124,7 @@ p2 {
 	left: 300px;
 }
 </style><br>
-<p3  style="text-indent: 40px; font-family:' Eras Medium ITC'" >Black Sponsorship (1 kid for 1 year) $
+<p3  style=" font-family:' Eras Medium ITC'" >Black Sponsorship (1 kid for 1 year) $
 210.00</p4><style>
 p3 {
     font-size: 155%;
@@ -132,14 +132,14 @@ p3 {
 	
 }
 </style><br>
-<p4  style="text-indent: 40px; font-family:' Eras Medium ITC'" >Blue Sponsorship (1 school for ½ year) $ 918.00</p4><style>
+<p4  style=" font-family:' Eras Medium ITC'" >Blue Sponsorship (1 school for ½ year) $ 918.00</p4><style>
 p4 {
     font-size: 155%;
 	position: relative;
 	
 }
 </style><br>
-<p5  style="text-indent: 40px; font-family:' Eras Medium ITC'" >Gold Sponsorship (1 school for 1 year) $ 1,890.00</p4><style>
+<p5  style=" font-family:' Eras Medium ITC'" >Gold Sponsorship (1 school for 1 year) $ 1,890.00</p4><style>
 p5 {
     font-size: 155%;
 	position: relative;
