Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -117,11 +117,11 @@ that serves kids who are in need of food over the weekends. We buy, pack and del
 }
 
 </style><br>
-	<p2  style="text-indent: 30px; font-family:' Eras Medium ITC'" >Sponsorship (1 kid for 1 month) $ 24.00</p4><style>
+	<p2  style=" font-family:' Eras Medium ITC'" >Sponsorship (1 kid for 1 month) $ 24.00</p4><style>
 p2 {
     font-size: 155%;
 	position: relative;
-	left: 300px;
+	
 }
 </style><br>
 <p3  style=" font-family:' Eras Medium ITC'" >Black Sponsorship (1 kid for 1 year) $
