Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -132,14 +132,14 @@ p3 {
 
 }
 </style><br>
-<p4  style=" font-family:' Eras Medium ITC'" >Blue Sponsorship (1 school for ½ year) $ 918.00</p4><style>
+	<p4  style=" font-family:' Eras Medium ITC'" ><font color="blue">Blue </font>Sponsorship (1 school for ½ year) $ 918.00</p4><style>
 p4 {
     font-size: 125%;
 	position: relative;
 	
 }
 </style><br>
-<p5  style=" font-family:' Eras Medium ITC'" >Gold Sponsorship (1 school for 1 year) $ 1,890.00</p4><style>
+<p5  style=" font-family:' Eras Medium ITC'" ><font color="gold">Gold </font>Sponsorship (1 school for 1 year) $ 1,890.00</p4><style>
 p5 {
     font-size: 125%;
 	position: relative;
