--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -96,6 +96,14 @@ left:635px;}
 </div>
 	<br><br>
 <a href="Sponsorship Program 2017.docx" download="Sponsorship Program 2017.docx">Download sponsorship form</a>
+	<style>@media screen and (max-width: 480px) {
+    a {font-size: 100px
+        
+    }
+}
+	
+	</style>
+	
             <div id="comp-j52tsaaz" class="Text">
     <p class="font_8" style="font-size:15px; line-height:1.5em"><span><span style="letter-spacing:0.01em"><span style="font-style:italic"><span style="font-size:15px"><span style="font-family:georgia,palatino,book antiqua,palatino linotype,serif">&nbsp; &nbsp; &nbsp; &nbsp;Sponsorship Program</span></span></span></span></span></p>
 	<style>p {
