Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -125,7 +125,7 @@ that serves kids who are in need of food over the weekends. We buy, pack and del
 }
 
 </style><br>
-	<p2  style=" font-family:' Eras Medium ITC'" >Sponsorship (1 kid for 1 month) $ 24.00</p4><style>
+	<p2  style=" font-family:' Eras Medium ITC'" >Sponsorship (1 kid for 1 month) $ 24.00</p2><style>
 p2 {
     font-size: 155%;
 	position: relative;
@@ -133,7 +133,7 @@ p2 {
 }
 </style><br>
 <p3  style=" font-family:' Eras Medium ITC'" >Black Sponsorship (1 kid for 1 year) $
-210.00</p4><style>
+210.00</p3><style>
 p3 {
     font-size: 125%;
 	position: relative;
@@ -147,11 +147,20 @@ p4 {
 	
 }
 </style><br>
-<p5  style=" font-family:' Eras Medium ITC'" ><font color="gold">Gold </font>Sponsorship (1 school for 1 year) $ 1,890.00</p4><style>
+<p5  style=" font-family:' Eras Medium ITC'" ><font color="gold">Gold </font>Sponsorship (1 school for 1 year) $ 1,890.00</p5><style>
 p5 {
     font-size: 125%;
 	position: relative;
 
+}
+</style><br>
+	<p6  style=" font-family:'Cambria'" >Businesses that choose to support us through a Blue and Gold sponsorships will be<br>
+recognized on our website. Individuals who choose to support a Black sponsorship or<br>
+above will also have this opportunity.</p6><style>
+p6 {
+    font-size: 125%;
+	font-weight: lighter;
+		position: relative;
 }
 </style><br>
     </section>
