--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -135,22 +135,25 @@ p2 {
 <p3  style=" font-family:' Eras Medium ITC'" >Black Sponsorship (1 kid for 1 year) $
 210.00</p3><style>
 p3 {
-    font-size: 125%;
+  font-size: 155%;
 	position: relative;
+	left: 190px;
 
 }
 </style><br>
 	<p4  style=" font-family:' Eras Medium ITC'" ><font color="blue">Blue </font>Sponsorship (1 school for ½ year) $ 918.00</p4><style>
 p4 {
-    font-size: 125%;
+  font-size: 155%;
 	position: relative;
-	
+	left: 190px;
+
 }
 </style><br>
 <p5  style=" font-family:' Eras Medium ITC'" ><font color="gold">Gold </font>Sponsorship (1 school for 1 year) $ 1,890.00</p5><style>
 p5 {
-    font-size: 125%;
+ font-size: 155%;
 	position: relative;
+	left: 190px;
 
 }
 </style><br>
