Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -163,6 +163,7 @@ above will also have this opportunity.</p6><style>
 p6 {
     font-size: 125%;
 	font-weight: lighter;
+	left: 190px;
 		position: relative;
 }
 </style><br>
