Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -167,7 +167,18 @@ p6 {
 	left: 190px;
 }
 </style><br>
-    </section>
+	<p7 style=" font-family:'Cambria'">Thank you for your donation our pending tax id# is 82-2235427. Make checks payable<br>
+to Backpack Buddies of Maple Valley. Mail checks to 20920 253 rd Ave SE, Maple<br>
+Valley, WA 98038. If you have any questions or comments please contact Mindy<br>
+Gamble (President) at 206-714- 4734.
+	</p7>   <style>
+p7 {
+    font-size: 125%;
+	font-weight: lighter;
+		position: relative;
+	left: 190px;
+}
+</style><br> </section>
 <footer class="container" id="SITE_FOOTER" >
     </footer>
 
