Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -178,7 +178,17 @@ p7 {
 		position: relative;
 	left: 190px;
 }
-</style><br> </section>
+</style><br> 
+<p8 style=" font-family:'Cambria'">*Numbers are based on bags costing $6.00 and the average amount of students being 9 per school (2016-17
+numbers).</p8>   <style>
+p8 {
+    font-size: 100%;
+	font-weight: lighter;
+		position: relative;
+	left: 190px;
+}
+</style><br> 
+</section>
 <footer class="container" id="SITE_FOOTER" >
     </footer>
 
