Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -178,7 +178,7 @@ p7 {
 		position: relative;
 	left: 190px;
 }
-</style><br> 
+</style><br> <br>
 
 </section>
 <footer class="container" id="SITE_FOOTER" >
