Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -124,7 +124,7 @@ that serves kids who are in need of food over the weekends. We buy, pack and del
 	left: 190px;
 }
 
-</style><br>
+</style><br><br>
 	<p2  style=" font-family:' Eras Medium ITC'" >Sponsorship (1 kid for 1 month) $ 24.00</p2><style>
 p2 {
     font-size: 155%;
@@ -156,7 +156,7 @@ p5 {
 	left: 190px;
 
 }
-</style><br>
+</style><br><br>
 	<p6  style=" font-family:'Cambria'" >Businesses that choose to support us through a Blue and Gold sponsorships will be<br>
 recognized on our website. Individuals who choose to support a Black sponsorship or<br>
 above will also have this opportunity.</p6><style>
