Update charity _ Donate2.html

--- a/charity _ Donate2.html
+++ b/charity _ Donate2.html
@@ -125,7 +125,7 @@ that serves kids who are in need of food over the weekends. We buy, pack and del
 }
 
 </style><br><br>
-	<p2  style=" font-family:' Eras Medium ITC'" >Sponsorship (1 kid for 1 month) $ 24.00</p2><style>
+	<p2  style=" font-family:' Eras Medium ITC'" ><span style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;"><font color="white">White</font></span> Sponsorship (1 kid for 1 month) $ 24.00</p2><style>
 p2 {
     font-size: 155%;
 	position: relative;
