--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
 
-    
+   <meta name="msvalidate.01" content="1D5ABF2095F814E102FFADAFC5926246" /> 
 
 <title>Backpack Buddies</title>
 
