--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <!-- saved from url=(0060)https://kgilliam429.wixsite.com/charity/?_escaped_fragment_= -->
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html><head><meta name="msvalidate.01" content="1D5ABF2095F814E102FFADAFC5926246" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
-
-   <meta name="msvalidate.01" content="1D5ABF2095F814E102FFADAFC5926246" /> 
+<meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
+<meta name="msvalidate.01" content="1D5ABF2095F814E102FFADAFC5926246" /> 
 
 <title>Backpack Buddies</title>
 
