--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
+<meta name="google-site-verification" content="GoqvmXD0G1UNFBYmQLLvPtDZLx-OrsKshvGPH70j9nE" />
 <meta name="msvalidate.01" content="1D5ABF2095F814E102FFADAFC5926246" /> 
 
 <title>Backpack Buddies</title>
